--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -113,7 +113,11 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-news .posts { padding: 20px 0; }
 
 /* Festival (festival.php) */
-#page-festival .festival-history { padding: 10px 40px; }
+#page-festival .festival-history {
+  padding: 10px 40px;
+  line-height: 1.7em;
+  font-size: 15px;
+}
 
 /* Juries */
 #page-juries .content { padding: 10px 40px; }
@@ -404,5 +408,13 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 
   .fa {
     font-size: 6em;
+  }
+}
+
+.paragraph-separator {
+  text-align: center;
+  margin: 40px 0;
+  svg {
+    width: 150px;
   }
 }
