Added BARS store link at the top of the sidebar

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -106,6 +106,9 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 /* Sidebar image crop widget */
 .bars-widget.sidebar.image { cursor: pointer; }
 
+/* BARS store sidebar widget */
+.bars-widget.bars-store { border-color: #565656; }
+
 /* Sponsors (sponsors.php) */
 #page-sponsors .page-header { background: none; }
 
