Added edition selector + 'no awards/juries' messages to juries page

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -64,20 +64,19 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-call.page { padding-bottom: 0; }
 #page-single.page { padding-top: 20px; }
 #page-call .page-header { padding-top: 30px; background: #110000; }
-#page-selection .page-header {
+#page-selection .page-header, #page-juries .page-header {
   padding-top: 30px;
   background: #110000;
   .page-title {
     display: flex;
     align-items: flex-end;
 
-    .selection-title {
+    .title-text {
       flex: 1;
       line-height: 1;
     }
   }
 }
-#page-juries .page-header { padding-top: 30px; background: #110000; }
 #page-juries .page-header.juries { padding-top: 30px; background: none; }
 #page-juries .page-header.juries.section { padding: 15px 0 15px 30px; background: none; font-size: 1.4em; }
 #page-juries .page-header.juries.section .fa { line-height: 2.2; margin: 0 5px; }
