--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -218,7 +218,8 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day { overflow: hidden; padding: 15px; }
 #page-selection .schedule-day.odd { background-color: rgba(30,30,30,0.3); }
 #page-selection .schedule-day.even { background-color: transparent; }
-#page-selection .schedule-day .schedule-day-info { width: 90px; text-align: center; float: left; }
+@schedule-day-number-width: 90px;
+#page-selection .schedule-day .schedule-day-info { width: @schedule-day-number-width; text-align: center; float: left; }
 #page-selection .schedule-day .movie-posts { overflow: hidden; }
 #page-selection .schedule-day .movie-post { width: 160px; min-height: 170px; }
 #page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgba(180,10,0,0.8); }
@@ -230,6 +231,10 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day .movie-post .movie-post-info { margin-top: 6px; }
 #page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
 #page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; }
+
+// sticky days styles
+#page-selection .schedule-day { position: relative; }
+#page-selection .schedule-day .movie-posts { margin-left: @schedule-day-number-width; }
 
 /* Movie info (single-movie.php) / Movie block info (single-movieblock.php) */
 .movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
