improved selection movie-post styles

--- a/assets/stylesheets/text.less
+++ b/assets/stylesheets/text.less
@@ -97,12 +97,13 @@
       .schedule-day-number { font-size: 36px; }
     }
     .movie-posts { font-family: 'Oswald'; color: white; }
-    .movie-post .movie-post-hour { text-shadow: 1px 1px 0.1em black; font-weight: bold; }
+    .movie-post .movie-post-hour { text-shadow: 1px 1px 0.1em black; font-weight: bold; color: #cccccc; }
     .movie-posts .movie-post .movie-post-section, .movie-posts .movie-post .movie-post-venue { text-shadow: 1px 1px 0.1em black; font-size: 7.5pt; }
     .movie-post .movie-post-title { font-size: 12pt; }
     .movie-post .movie-post-info { font-size: 9pt; }
-    .movie-post a { text-decoration: none; color: #bbbbbb; }
+    .movie-post a { text-decoration: none; color: #cccccc; }
     .movie-post:hover a { text-decoration: none; color: white; }
+    .movie-post:hover .movie-post-hour { color: white; }
   }
 }
 
