--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -222,15 +222,24 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day .schedule-day-info { width: @schedule-day-number-width; text-align: center; float: left; }
 #page-selection .schedule-day .movie-posts { overflow: hidden; }
 #page-selection .schedule-day .movie-post { width: 160px; min-height: 170px; }
-#page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgba(180,10,0,0.8); }
+#page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgb(180,10,0); }
 #page-selection .schedule-day .movie-post .movie-post-thumbnail { position: relative; }
-#page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
-#page-selection .schedule-day .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
-#page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 65px; padding: 4px; }
+#page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgb(180, 10, 0); padding: 0 5px; }
+#page-selection .schedule-day .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgb(180, 10, 0); padding: 0 5px; }
+#page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 65px; padding: 10px; }
 #page-selection .schedule-day .movie-post .movie-post-title { line-height: 14pt; }
 #page-selection .schedule-day .movie-post .movie-post-info { margin-top: 6px; }
-#page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
-#page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; }
+#page-selection .schedule-day .movie-post {
+  position: relative;
+  border: 1px solid rgba(255,255,255,0.1);
+  float: left;
+  margin: 0 5px 10px 5px;
+  background-color: rgba(0,0,0,0.5);
+  padding: 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+#page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); border-color: rgba(255,255,255,0.3); }
 
 // sticky days styles
 #page-selection .schedule-day { position: relative; }
