--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -220,8 +220,8 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day.even { background-color: transparent; }
 @schedule-day-number-width: 90px;
 #page-selection .schedule-day .schedule-day-info { width: @schedule-day-number-width; text-align: center; float: left; }
-#page-selection .schedule-day .movie-posts { overflow: hidden; }
-#page-selection .schedule-day .movie-post { width: 160px; min-height: 170px; }
+#page-selection .schedule-day .movie-posts { overflow: hidden; display: flex; flex-wrap: wrap; }
+#page-selection .schedule-day .movie-post { width: 160px; }
 #page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgb(180,10,0); }
 #page-selection .schedule-day .movie-post .movie-post-thumbnail { position: relative; }
 #page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgb(180, 10, 0); padding: 0 5px; }
@@ -232,7 +232,6 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day .movie-post {
   position: relative;
   border: 1px solid rgba(255,255,255,0.1);
-  float: left;
   margin: 0 5px 10px 5px;
   background-color: rgba(0,0,0,0.5);
   padding: 0;
