--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -220,16 +220,16 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day.even { background-color: transparent; }
 @schedule-day-number-width: 90px;
 #page-selection .schedule-day .schedule-day-info { width: @schedule-day-number-width; text-align: center; float: left; }
-#page-selection .schedule-day .movie-posts { overflow: hidden; display: flex; flex-wrap: wrap; }
-#page-selection .schedule-day .movie-post { width: 160px; }
-#page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgb(180,10,0); }
-#page-selection .schedule-day .movie-post .movie-post-thumbnail { position: relative; }
-#page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgb(180, 10, 0); padding: 0 5px; }
-#page-selection .schedule-day .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgb(180, 10, 0); padding: 0 5px; }
-#page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 65px; padding: 10px; }
-#page-selection .schedule-day .movie-post .movie-post-title { line-height: 14pt; }
-#page-selection .schedule-day .movie-post .movie-post-info { margin-top: 6px; }
-#page-selection .schedule-day .movie-post {
+#page-selection .movie-posts { overflow: hidden; display: flex; flex-wrap: wrap; }
+#page-selection .movie-post { width: 160px; }
+#page-selection .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgb(180,10,0); }
+#page-selection .movie-post .movie-post-thumbnail { position: relative; }
+#page-selection .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgb(180, 10, 0); padding: 0 5px; }
+#page-selection .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgb(180, 10, 0); padding: 0 5px; }
+#page-selection .movie-post .movie-post-title-container { min-height: 65px; padding: 10px; }
+#page-selection .movie-post .movie-post-title { line-height: 14pt; }
+#page-selection .movie-post .movie-post-info { margin-top: 6px; }
+#page-selection .movie-post {
   position: relative;
   border: 1px solid rgba(255,255,255,0.1);
   margin: 0 5px 10px 5px;
@@ -238,11 +238,11 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
-#page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); border-color: rgba(255,255,255,0.3); }
+#page-selection .movie-post:hover { background-color: rgba(0,0,0,1); border-color: rgba(255,255,255,0.3); }
 
 // sticky days styles
 #page-selection .schedule-day { position: relative; }
-#page-selection .schedule-day .movie-posts { margin-left: @schedule-day-number-width; }
+#page-selection .movie-posts { margin-left: @schedule-day-number-width; }
 
 /* Movie info (single-movie.php) / Movie block info (single-movieblock.php) */
 .movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
