--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -245,29 +245,160 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .movie-posts { margin-left: @schedule-day-number-width; }
 
 /* Movie info (single-movie.php) / Movie block info (single-movieblock.php) */
-.movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
-.movie .scratch,
-.movieblock .scratch { margin: 15px 0; }
-.movie .screenings-info,
-.movieblock .screenings-info { float: right; margin: -10px -10px 0 30px; } /* -10px counter act against padding: 10px in .movie */
-.movie .screenings-info .section,
-.movieblock .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px 40px 5px 10px; }
-.movie .screenings-info .screenings,
-.movieblock .screenings-info .screenings { overflow: hidden; }
-.movie .screenings-info .screenings .screenings-caption,
-.movieblock .screenings-info .screenings .screenings-caption { width: 100%; float: left; background-color: rgba(180,10,0,0.8); padding-left: 10px; margin-top: 5px; }
-.movie .screenings-info .screenings .screening,
-.movieblock .screenings-info .screenings .screening { float: left; padding: 5px; }
-.movie .screenings-info .screenings .screening .screening-daynumber,
-.movieblock .screenings-info .screenings .screening .screening-daynumber { margin-top: -5px; }
-.movie .info-container .info,
-.movieblock .info-container .info { overflow: hidden; }
-.movie .info-container .image,
-.movieblock .info-container .image { float: left; padding: 0 10px 0 0; }
-.movie .info-container .info .directors { margin-top: 10px; }
-.movie .movie-synopsis { overflow: hidden; margin-bottom: 20px;}
-.movie .movie-synopsis p { margin: 0; }
-.movie .trailer-container { float: right; margin: 0 0 5px 10px; }
+.movie, .movieblock {
+  background: black;
+  width: 700px;
+  padding: 10px;
+  position: relative;
+
+  .scratch {
+    margin: 15px 0;
+  }
+
+  .screenings-info {
+    float: right;
+    margin: -10px -10px 0 30px;  /* -10px counter act against padding: 10px in .movie */
+    margin-right: 5px;
+    min-width: 260px;
+
+    .screenings {
+      display: flex;
+      align-items: center;
+      padding: 0 5px;
+
+      .screenings-group {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        .screenings-container {
+          display: flex;
+          align-items: center;
+          justify-content: space-evenly;
+        }
+
+        .screenings-caption {
+          background-color: rgba(180,10,0,0.8);
+          padding: 2px 10px;
+          text-align: center;
+        }
+
+        & + .screenings-group {
+          margin-left: 5px;
+        }
+
+        &:first-child {
+          .screenings-caption {
+            border-bottom-left-radius: 5px;
+          }
+        }
+
+        &:last-child {
+          .screenings-caption {
+            border-bottom-right-radius: 5px;
+          }
+        }
+      }
+
+      .screening {
+        float: left;
+        padding: 5px;
+        position: relative;
+
+        .screening-daynumber {
+          margin-top: -5px;
+        }
+
+        &.date-passed {
+          color: rgba(255,255,255, 0.5);
+        }
+
+        .scratch {
+          margin: 0;
+          position: absolute;
+          width: 50px;
+          top: 30px;
+          left: -5px;
+
+          .rotate(-40);
+          opacity: 1;
+
+          &.second-scratch {
+            top: 40px;
+            left: -3px;
+            .rotate(-46);
+          }
+        }
+      }
+    }
+
+    .section {
+      font-size: 13.5pt;
+      background-color: rgba(180,10,0,0.8);
+      padding: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      margin-bottom: 5px;
+    }
+  }
+
+  .info-container {
+    .info {
+      overflow: hidden;
+
+      .directors {
+        margin-top: 10px;
+      }
+    }
+
+    .image {
+      float: left;
+      padding: 0 10px 0 0;
+    }
+  }
+
+  .movie-synopsis {
+    overflow: hidden;
+    margin-bottom: 20px;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  .trailer-container {
+    float: right;
+    margin: 0 0 5px 10px;
+  }
+
+  .watch-button {
+    margin-top: 10px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 42px;
+    border-radius: 50px;
+    font-size: 23px;
+    padding-right: 15px;
+
+    background: rgb(220,0,0);
+    border: 5px solid rgb(220,0,0);
+    border-radius: 50px;
+    color: white;
+
+    .fa {
+      font-size: 50px;
+      margin-right: 10px;
+    }
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
 
 /* Movie block info (single-movieblock.php) */
 .movieblock .movie-selectors { float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
