--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -257,7 +257,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 
   .screenings-info {
     float: right;
-    margin: -10px -10px 0 30px;  /* -10px counter act against padding: 10px in .movie */
+    margin: -10px -10px 15px 30px;  /* -10px counter act against padding: 10px in .movie */
     margin-right: 5px;
     min-width: 260px;
 
@@ -275,6 +275,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
           display: flex;
           align-items: center;
           justify-content: space-evenly;
+          margin-top: 10px;
         }
 
         .screenings-caption {
@@ -302,7 +303,6 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 
       .screening {
         float: left;
-        padding: 5px;
         position: relative;
 
         .screening-daynumber {
@@ -317,14 +317,14 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
           margin: 0;
           position: absolute;
           width: 50px;
-          top: 30px;
-          left: -5px;
+          top: 20px;
+          left: -8px;
 
           .rotate(-40);
           opacity: 1;
 
           &.second-scratch {
-            top: 40px;
+            top: 35px;
             left: -3px;
             .rotate(-46);
           }
@@ -374,28 +374,41 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
     margin: 0 0 5px 10px;
   }
 
-  .watch-button {
-    margin-top: 10px;
-    display: inline-flex;
+  .watch-button-container {
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: 42px;
-    border-radius: 50px;
-    font-size: 23px;
-    padding-right: 15px;
 
-    background: rgb(220,0,0);
-    border: 5px solid rgb(220,0,0);
-    border-radius: 50px;
-    color: white;
+    .watch-button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50px;
+      padding-right: 10px;
+      font-size: 18px;
+      height: 30px;
+      border-radius: 50px;
+      background: rgba(180, 10, 0, 0.8);
+      border: 3px solid rgba(180, 10, 0, 0.8);
+      color: white;
 
-    .fa {
-      font-size: 50px;
-      margin-right: 10px;
-    }
+      .fa {
+        font-size: 34px;
+        margin-right: 7px;
+      }
 
-    &:hover {
-      text-decoration: none;
+      &:hover {
+        text-decoration: none;
+      }
+
+      &.disabled {
+        pointer-events: none;
+        cursor: default;
+        background-color: #999999;
+        border-color: #777777;
+        color: #777777;
+        font-size: 15px;
+      }
     }
   }
 }
