Improved watch movie button

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -384,13 +384,13 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
       align-items: center;
       justify-content: center;
       border-radius: 50px;
-      padding-right: 10px;
       font-size: 18px;
-      height: 30px;
       border-radius: 50px;
       background: rgba(180, 10, 0, 0.8);
       border: 3px solid rgba(180, 10, 0, 0.8);
       color: white;
+      padding: 5px;
+      padding-right: 10px;
 
       .fa {
         font-size: 34px;
