--- a/assets/stylesheets/text.less
+++ b/assets/stylesheets/text.less
@@ -96,6 +96,11 @@
       .schedule-day-name { font-size: 12pt; }
       .schedule-day-number { font-size: 36px; }
     }
+
+    .schedule-day-collapse {
+      font-size: 1.3em;
+      color: #CECECE;
+    }
   }
 
   .movie-posts { font-family: 'Oswald'; color: white; }
