updated sponsors bars 2020

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -1,11 +1,13 @@
 .sponsors {
-  text-align: center; overflow: hidden; width: 100%; margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 
   .sponsor {
     margin: 20px 35px 0 35px;
     width: 140px;
     height: 80px;
-    display: inline-block;
     a { display: block; height: 100%; width: 100%; }
   }
 
@@ -43,7 +45,7 @@
   .sponsor-wancamp               { background-image: url('../images/sponsors/auspiciante_wancamp_hover.png'); }
   .sponsor-aclf                  { background-image: url('../images/sponsors/auspiciante_aclf_hover.png'); }
   .sponsor-apima                 { background-image: url('../images/sponsors/auspiciante_apima_hover.png'); }
-  .sponsor-marginadoproducciones { background-image: url('../images/sponsors/auspiciante_marginadoproducciones_hover.png'); }
+  .sponsor-marginado             { background-image: url('../images/sponsors/auspiciante_marginado_hover.png'); }
   .sponsor-mdpff                 { background-image: url('../images/sponsors/auspiciante_mdpff_hover.png'); }
   .sponsor-rebisfx               { background-image: url('../images/sponsors/auspiciante_rebisfx_hover.png'); }
   .sponsor-picsi                 { background-image: url('../images/sponsors/auspiciante_picsi_hover.png'); }
@@ -68,6 +70,12 @@
   .sponsor-okinawa-film-office   { background-image: url('../images/sponsors/auspiciante_okinawa_film_office_hover.png'); }
   .sponsor-felices-las-vacas     { background-image: url('../images/sponsors/auspiciante_felices_las_vacas_hover.png'); }
   .sponsor-no-pain-tattoos       { background-image: url('../images/sponsors/auspiciante_no_pain_tattoos_hover.png'); }
+  .sponsor-contar                { background-image: url('../images/sponsors/auspiciante_contar_hover.png'); }
+  .sponsor-flixxo                { background-image: url('../images/sponsors/auspiciante_flixxo_hover.png'); }
+  .sponsor-ba-audiovisual        { background-image: url('../images/sponsors/auspiciante_ba_audiovisual_hover.png'); }
+  .sponsor-akataka               { background-image: url('../images/sponsors/auspiciante_akataka_hover.png'); }
+  .sponsor-enchulame-la-camara   { background-image: url('../images/sponsors/auspiciante_enchulame_la_camara_hover.png'); }
+  .sponsor-fant-latam            { background-image: url('../images/sponsors/auspiciante_fant_latam_hover.png'); }
 
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
@@ -99,7 +107,7 @@
   .sponsor-wancamp:hover               { background-image: url('../images/sponsors/auspiciante_wancamp.png'); }
   .sponsor-aclf:hover                  { background-image: url('../images/sponsors/auspiciante_aclf.png'); }
   .sponsor-apima:hover                 { background-image: url('../images/sponsors/auspiciante_apima.png'); }
-  .sponsor-marginadoproducciones:hover { background-image: url('../images/sponsors/auspiciante_marginadoproducciones.png'); }
+  .sponsor-marginado:hover             { background-image: url('../images/sponsors/auspiciante_marginado.png'); }
   .sponsor-mdpff:hover                 { background-image: url('../images/sponsors/auspiciante_mdpff.png'); }
   .sponsor-rebisfx:hover               { background-image: url('../images/sponsors/auspiciante_rebisfx.png'); }
   .sponsor-picsi:hover                 { background-image: url('../images/sponsors/auspiciante_picsi.png'); }
@@ -124,9 +132,15 @@
   .sponsor-okinawa-film-office:hover   { background-image: url('../images/sponsors/auspiciante_okinawa_film_office.png'); }
   .sponsor-felices-las-vacas:hover     { background-image: url('../images/sponsors/auspiciante_felices_las_vacas.png'); }
   .sponsor-no-pain-tattoos:hover       { background-image: url('../images/sponsors/auspiciante_no_pain_tattoos.png'); }
+  .sponsor-contar:hover                { background-image: url('../images/sponsors/auspiciante_contar.png'); }
+  .sponsor-flixxo:hover                { background-image: url('../images/sponsors/auspiciante_flixxo.png'); }
+  .sponsor-ba-audiovisual:hover        { background-image: url('../images/sponsors/auspiciante_ba_audiovisual.png'); }
+  .sponsor-akataka:hover               { background-image: url('../images/sponsors/auspiciante_akataka.png'); }
+  .sponsor-enchulame-la-camara:hover   { background-image: url('../images/sponsors/auspiciante_enchulame_la_camara.png'); }
+  .sponsor-fant-latam:hover            { background-image: url('../images/sponsors/auspiciante_fant_latam.png'); }
 
   // non clickable sponsors
   .sponsor-mecenazgo-cultural    { background-image: url('../images/sponsors/auspiciante_mecenazgo_cultural.png'); }
   .sponsor-festeringslime        { background-image: url('../images/sponsors/auspiciante_festeringslime.png'); }
-
+  .sponsor-ministerio-de-cultura { background-image: url('../images/sponsors/auspiciante_ministerio_de_cultura.png'); }
 }
