fixed venues table in header for long texts

--- a/assets/stylesheets/text.less
+++ b/assets/stylesheets/text.less
@@ -22,6 +22,11 @@
   .center { text-align: center; font-size: 16pt; font-weight: bold; letter-spacing: 0.1em; line-height: 1em; }
   .right { text-align: left; }
   .size-highlight { font-size: 9pt; }
+
+  .venues-table {
+    table-layout: fixed;
+    width: 100%;
+  }
 }
 #header-menu { text-transform: uppercase; }
 
