Bars 2021 new logos

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -86,6 +86,10 @@
   .sponsor-akataka               { background-image: url('../images/sponsors/auspiciante_akataka.png'); }
   .sponsor-enchulame-la-camara   { background-image: url('../images/sponsors/auspiciante_enchulame_la_camara.png'); }
   .sponsor-fant-latam            { background-image: url('../images/sponsors/auspiciante_fant_latam.png'); }
+  .sponsor-drag-clash            { background-image: url('../images/sponsors/auspiciante_drag_clash.png'); }
+  .sponsor-itau-fundacion        { background-image: url('../images/sponsors/auspiciante_itau_fundacion.png'); }
+  .sponsor-vivamos-cultura       { background-image: url('../images/sponsors/auspiciante_vivamos_cultura.png'); }
+  .sponsor-museos-ba             { background-image: url('../images/sponsors/auspiciante_museos_ba.png'); }
 
   // non clickable sponsors
   .sponsor-mecenazgo-cultural    { background-image: url('../images/sponsors/auspiciante_mecenazgo_cultural.png'); }
