prettier pass to entire codebase

--- a/assets/stylesheets/logos.less
+++ b/assets/stylesheets/logos.less
@@ -1,7 +1,11 @@
 .header-image {
-  width: 350px; height: 119px; margin: 6px auto 0 auto;
+  width: 350px;
+  height: 119px;
+  margin: 6px auto 0 auto;
   background-image: url('../images/header.png');
-  &:hover { cursor: pointer; }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .footer-logos {
@@ -34,6 +38,7 @@
 }
 
 .bars-widget-logo {
-  width: 29px; height: 29px;
+  width: 29px;
+  height: 29px;
   background-image: url('../images/loguito.png');
 }
