--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -29,11 +29,10 @@ Author URI:     mailto:author@bars.com
 
 @import url('fancybox/dist/css/jquery.fancybox.css');
 
-
 // Unrelated to react apps, this is only needed because of font-awesome
 // usage in standalone less/css/html/php files
-@import "@fortawesome/fontawesome-free/less/fontawesome.less";
-@import "@fortawesome/fontawesome-free/less/regular.less";
-@import "@fortawesome/fontawesome-free/less/solid.less";
-@import "@fortawesome/fontawesome-free/less/brands.less";
-@fa-font-path: "@fortawesome/fontawesome-free/webfonts";
+@import '@fortawesome/fontawesome-free/less/fontawesome.less';
+@import '@fortawesome/fontawesome-free/less/regular.less';
+@import '@fortawesome/fontawesome-free/less/solid.less';
+@import '@fortawesome/fontawesome-free/less/brands.less';
+@fa-font-path: '@fortawesome/fontawesome-free/webfonts';
