--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -8,7 +8,11 @@
     margin: 20px 35px 0 35px;
     width: 140px;
     height: 80px;
-    a { display: block; height: 100%; width: 100%; }
+    a {
+      display: block;
+      height: 100%;
+      width: 100%;
+    }
 
     // filters: gray-scale + opacity
     filter: gray opacity(70%); /* IE6-9 */
