--- a/assets/stylesheets/text.less
+++ b/assets/stylesheets/text.less
@@ -1,151 +1,359 @@
 /* Text styles */
-.text-oswald { font-family: 'Oswald'; font-size: 10pt; color: #CECECE; }
-.text-opensans { font-family: 'Open Sans'; font-size: 10pt; color: #CECECE; }
+.text-oswald {
+  font-family: 'Oswald';
+  font-size: 10pt;
+  color: #cecece;
+}
+.text-opensans {
+  font-family: 'Open Sans';
+  font-size: 10pt;
+  color: #cecece;
+}
 /*.text-opensans { font-family: 'Lora'; line-height: 1.5em; font-size: 10pt; color: #CECECE; }*/
-.indented { text-indent: 16pt; }
+.indented {
+  text-indent: 16pt;
+}
 
 .warning {
-  font-family: Oswald, sans-serif; color: #CECECE; text-align: center;
-  .reason { font-size: 24pt; }
-  .description { font-size: 14pt; }
-  .fa-solid, .fa-regular, .fa-brands { font-size: 4em; }
+  font-family: Oswald, sans-serif;
+  color: #cecece;
+  text-align: center;
+  .reason {
+    font-size: 24pt;
+  }
+  .description {
+    font-size: 14pt;
+  }
+  .fa-solid,
+  .fa-regular,
+  .fa-brands {
+    font-size: 4em;
+  }
 }
 
 /* Header */
-#header { font-family: 'Oswald'; color: white; }
-#header-description { font-size: 0.65em; letter-spacing: 0.2em; font-weight: lighter; text-align: center; text-transform: uppercase; }
-#header-info-container { text-shadow: 2px 2px 0.1em black; }
-#header-info {
-  font-size: 6pt; text-transform: uppercase;
-  .left, .right { letter-spacing: 0.2em; }
-  .left { text-align: right; }
-  .center { text-align: center; font-size: 16pt; font-weight: bold; letter-spacing: 0.1em; line-height: 1em; }
-  .right { text-align: left; }
-  .size-highlight { font-size: 9pt; }
+#header {
+  font-family: 'Oswald';
+  color: white;
 }
-#header-menu { text-transform: uppercase; }
+#header-description {
+  font-size: 0.65em;
+  letter-spacing: 0.2em;
+  font-weight: lighter;
+  text-align: center;
+  text-transform: uppercase;
+}
+#header-info-container {
+  text-shadow: 2px 2px 0.1em black;
+}
+#header-info {
+  font-size: 6pt;
+  text-transform: uppercase;
+  .left,
+  .right {
+    letter-spacing: 0.2em;
+  }
+  .left {
+    text-align: right;
+  }
+  .center {
+    text-align: center;
+    font-size: 16pt;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    line-height: 1em;
+  }
+  .right {
+    text-align: left;
+  }
+  .size-highlight {
+    font-size: 9pt;
+  }
+}
+#header-menu {
+  text-transform: uppercase;
+}
 
 /* Page contents */
-#page-festival .festival-history p, #page-call .basis p { text-indent: 16pt; }
+#page-festival .festival-history p,
+#page-call .basis p {
+  text-indent: 16pt;
+}
 
 /* Page general */
-.page-header { font-family: Oswald; font-size: 24pt; color: #CECECE; }
-.page-header .subheader { font-size: 10pt; }
-#page-selection .page-header { line-height: 0.8; }
-#page-call .page-header { font-size: 18pt; line-height: 1; }
+.page-header {
+  font-family: Oswald;
+  font-size: 24pt;
+  color: #cecece;
+}
+.page-header .subheader {
+  font-size: 10pt;
+}
+#page-selection .page-header {
+  line-height: 0.8;
+}
+#page-call .page-header {
+  font-size: 18pt;
+  line-height: 1;
+}
 
 /* Widget */
-.bars-widget-header { font-family: 'Oswald'; color: white; text-transform: uppercase; font-size: 16pt; letter-spacing: 1px; font-style: normal;  }
+.bars-widget-header {
+  font-family: 'Oswald';
+  color: white;
+  text-transform: uppercase;
+  font-size: 16pt;
+  letter-spacing: 1px;
+  font-style: normal;
+}
 
 /* Home (index.php) */
 #page-home .page-section-title,
 #page-single .page-section-title,
-#page-search .page-section-title { text-shadow: 2px 2px 0.1em black; color: white; font-family: 'Oswald'; font-size: 18pt; }
-#page-home .more-posts { font-family: Oswald; text-transform: uppercase; text-align: center; font-size: 12pt; }
-#page-home .more-posts a { color: white; text-decoration: none; }
+#page-search .page-section-title {
+  text-shadow: 2px 2px 0.1em black;
+  color: white;
+  font-family: 'Oswald';
+  font-size: 18pt;
+}
+#page-home .more-posts {
+  font-family: Oswald;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 12pt;
+}
+#page-home .more-posts a {
+  color: white;
+  text-decoration: none;
+}
 
 /* Search form */
-.searchform input[type=text] { font: normal 15px Oswald, sans-serif; }
-.searchform input[type=submit] { font: normal 15px Oswald, sans-serif; text-transform: uppercase; text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3); color: white; }
+.searchform input[type='text'] {
+  font:
+    normal 15px Oswald,
+    sans-serif;
+}
+.searchform input[type='submit'] {
+  font:
+    normal 15px Oswald,
+    sans-serif;
+  text-transform: uppercase;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+  color: white;
+}
 
 /* Search (search.php) */
 #page-search .search-summary {
-  font-family: Oswald, sans-serif; color: #CECECE; text-transform: uppercase;
-  .keyword { font-weight: 400; font-size: 20pt; color: rgb(175,0,0); }
+  font-family: Oswald, sans-serif;
+  color: #cecece;
+  text-transform: uppercase;
+  .keyword {
+    font-weight: 400;
+    font-size: 20pt;
+    color: rgb(175, 0, 0);
+  }
 }
 
 /* Latest posts / news */
 .posts {
-  font-family: 'Oswald'; color: white;
+  font-family: 'Oswald';
+  color: white;
   .post {
-    .post-date { font-size: 10pt; }
-    .post-title { font-size: 18pt; }
-    .post-excerpt { word-wrap: break-word; font-size: 10pt; }
-    .post-footer { font-size: 8pt; }
+    .post-date {
+      font-size: 10pt;
+    }
+    .post-title {
+      font-size: 18pt;
+    }
+    .post-excerpt {
+      word-wrap: break-word;
+      font-size: 10pt;
+    }
+    .post-footer {
+      font-size: 8pt;
+    }
   }
 }
 
 /* Single post (single.php) */
 #page-single {
   .post-header {
-    color: white; font-family: 'Oswald';
-    .post-title { text-shadow: 2px 2px 0.1em black; font-size: 2.2em; }
+    color: white;
+    font-family: 'Oswald';
+    .post-title {
+      text-shadow: 2px 2px 0.1em black;
+      font-size: 2.2em;
+    }
     .post-category,
-    .post-date { font-size: 10pt; }
+    .post-date {
+      font-size: 10pt;
+    }
   }
-  .post-leave-us-a-comment { font-family: 'Open Sans'; font-size: 0.8em; color: white; }
-  .post-previous, .post-next { font-family: 'Oswald'; color: white; }
+  .post-leave-us-a-comment {
+    font-family: 'Open Sans';
+    font-size: 0.8em;
+    color: white;
+  }
+  .post-previous,
+  .post-next {
+    font-family: 'Oswald';
+    color: white;
+  }
   .post-related-posts {
-    font-family: 'Oswald'; font-size: 12pt; text-align: center; color: white;
+    font-family: 'Oswald';
+    font-size: 12pt;
+    text-align: center;
+    color: white;
     .post-related-post {
-      .post-related-post-date { font-size: 8pt; }
-      .post-related-post-date, .post-related-post-title { text-align: left; }
+      .post-related-post-date {
+        font-size: 8pt;
+      }
+      .post-related-post-date,
+      .post-related-post-title {
+        text-align: left;
+      }
     }
   }
 }
 
 /* Call for entries (call.php) */
-#page-call .mail-address, #page-call .shortfilm-format { text-indent: 0; }
+#page-call .mail-address,
+#page-call .shortfilm-format {
+  text-indent: 0;
+}
 
 /* Selections (selection.php) */
 #page-selection {
-  .schedule-week { font-family: 'Open Sans'; font-size: 10pt; color: #CECECE; }
+  .schedule-week {
+    font-family: 'Open Sans';
+    font-size: 10pt;
+    color: #cecece;
+  }
   .schedule-day {
     .schedule-day-info {
-      font-family: 'Oswald'; color: #CECECE; text-shadow: 2px 2px 0.1em black;
-      .schedule-day-name { font-size: 12pt; }
-      .schedule-day-number { font-size: 36px; }
+      font-family: 'Oswald';
+      color: #cecece;
+      text-shadow: 2px 2px 0.1em black;
+      .schedule-day-name {
+        font-size: 12pt;
+      }
+      .schedule-day-number {
+        font-size: 36px;
+      }
     }
 
     .schedule-day-collapse {
       font-size: 1.3em;
-      color: #CECECE;
+      color: #cecece;
     }
   }
 
-  .movie-posts { font-family: 'Oswald'; color: white; }
-  .movie-post .movie-post-hour { text-shadow: 1px 1px 0.1em black; font-weight: bold; color: #cccccc; }
-  .movie-posts .movie-post .movie-post-section, .movie-posts .movie-post .movie-post-venue { text-shadow: 1px 1px 0.1em black; font-size: 7.5pt; }
-  .movie-post .movie-post-title { font-size: 12pt; }
-  .movie-post .movie-post-info { font-size: 9pt; }
-  .movie-post a { text-decoration: none; color: #cccccc; }
-  .movie-post:hover a { text-decoration: none; color: white; }
-  .movie-post:hover .movie-post-hour { color: white; }
+  .movie-posts {
+    font-family: 'Oswald';
+    color: white;
+  }
+  .movie-post .movie-post-hour {
+    text-shadow: 1px 1px 0.1em black;
+    font-weight: bold;
+    color: #cccccc;
+  }
+  .movie-posts .movie-post .movie-post-section,
+  .movie-posts .movie-post .movie-post-venue {
+    text-shadow: 1px 1px 0.1em black;
+    font-size: 7.5pt;
+  }
+  .movie-post .movie-post-title {
+    font-size: 12pt;
+  }
+  .movie-post .movie-post-info {
+    font-size: 9pt;
+  }
+  .movie-post a {
+    text-decoration: none;
+    color: #cccccc;
+  }
+  .movie-post:hover a {
+    text-decoration: none;
+    color: white;
+  }
+  .movie-post:hover .movie-post-hour {
+    color: white;
+  }
 }
 
 /* Movie info (single-movie.php) */
-.movie .screenings-info, .movie .info-container .info { color: white; }
-.movie .screenings-info .screenings .screenings-caption { font-size: 10pt; }
-.movie .screenings-info .screenings .screening { text-align: center; }
+.movie .screenings-info,
+.movie .info-container .info {
+  color: white;
+}
+.movie .screenings-info .screenings .screenings-caption {
+  font-size: 10pt;
+}
+.movie .screenings-info .screenings .screening {
+  text-align: center;
+}
 .movie .screenings-info .screenings .screening,
 .movie .info-container .info .links,
 .movie .info-container .info .specs,
 .movie .info-container .info .directors,
-.movie .info-container .info .cast { font-size: 9pt; }
+.movie .info-container .info .cast {
+  font-size: 9pt;
+}
 .movie .screenings-info .screenings .screening .screening-daynumber,
-.movie .info-container .info .title { font-size: 14.5pt; }
+.movie .info-container .info .title {
+  font-size: 14.5pt;
+}
 
 /* Movie block info (single-movieblock.php) */
 .movieblock .screenings-info,
-.movieblock .info-container .info { color: white; }
-.movieblock .screenings-info .screenings .screenings-caption { font-size: 10pt; }
-.movieblock .screenings-info .screenings .screening { font-size: 9pt; text-align: center; }
+.movieblock .info-container .info {
+  color: white;
+}
+.movieblock .screenings-info .screenings .screenings-caption {
+  font-size: 10pt;
+}
+.movieblock .screenings-info .screenings .screening {
+  font-size: 9pt;
+  text-align: center;
+}
 .movieblock .screenings-info .screenings .screening .screening-daynumber,
-.movieblock .info-container .info .title { font-size: 14.5pt; }
-.movieblock .movie-selectors { font-family: 'Oswald'; color: white; }
-.movieblock .movie-selectors .movie-post .movie-post-title { font-size: 16px !important; }
-.movieblock .movie-selectors .movie-post .movie-post-info { font-size: 12px; }
-.movieblock .movie-info-displayer { font-family: 'Oswald'; color: white; }
-.movieblock .movie-info-displayer .info .title { font-size: 20px; }
+.movieblock .info-container .info .title {
+  font-size: 14.5pt;
+}
+.movieblock .movie-selectors {
+  font-family: 'Oswald';
+  color: white;
+}
+.movieblock .movie-selectors .movie-post .movie-post-title {
+  font-size: 16px !important;
+}
+.movieblock .movie-selectors .movie-post .movie-post-info {
+  font-size: 12px;
+}
+.movieblock .movie-info-displayer {
+  font-family: 'Oswald';
+  color: white;
+}
+.movieblock .movie-info-displayer .info .title {
+  font-size: 20px;
+}
 .movieblock .movie-info-displayer .info .year,
 .movieblock .movie-info-displayer .info .country,
 .movieblock .movie-info-displayer .info .links,
 .movieblock .movie-info-displayer .info .runtime,
 .movieblock .movie-info-displayer .info .directors,
-.movieblock .movie-info-displayer .info .cast { font-size: 12px; }
+.movieblock .movie-info-displayer .info .cast {
+  font-size: 12px;
+}
 
 /* Contact (contact.php) */
-#page-contact .contact-form-input-hint { font-size: 8pt; font-style: italic; }
+#page-contact .contact-form-input-hint {
+  font-size: 8pt;
+  font-style: italic;
+}
 
 /* Press (press.php) */
-#page-press .press-form-input-hint { font-size: 8pt; font-style: italic; }
+#page-press .press-form-input-hint {
+  font-size: 8pt;
+  font-style: italic;
+}
