--- a/assets/stylesheets/contact_form.less
+++ b/assets/stylesheets/contact_form.less
@@ -1,33 +1,92 @@
 /* Form & Input layout */
 #contact-form {
-  table { border-color: transparent; border-spacing: 20px; }
-  .contact-form-input > * { vertical-align: top; }
-  .contact-form-input .contact-form-input-label { width: 100px; text-align: right; }
-  .contact-form-input .contact-form-input-label.required:before { content: '*'; font-weight: bold; color: red; margin: 0 8px 0 0; }
+  table {
+    border-color: transparent;
+    border-spacing: 20px;
+  }
+  .contact-form-input > * {
+    vertical-align: top;
+  }
+  .contact-form-input .contact-form-input-label {
+    width: 100px;
+    text-align: right;
+  }
+  .contact-form-input .contact-form-input-label.required:before {
+    content: '*';
+    font-weight: bold;
+    color: red;
+    margin: 0 8px 0 0;
+  }
 
-  #name input, #email input, #url input, #subject input { width: 350px; }
+  #name input,
+  #email input,
+  #url input,
+  #subject input {
+    width: 350px;
+  }
 
-  #message textarea { width: 350px; height: 150px; }
-  .contact-form-input-hint { text-align: right; }
+  #message textarea {
+    width: 350px;
+    height: 150px;
+  }
+  .contact-form-input-hint {
+    text-align: right;
+  }
 
   /* Input styling */
-  input, textarea { border-radius: 4px; font-family: 'Open Sans'; font-size: 10pt; margin: 0 0 5px 0; padding: 8px; }
-  #submit input { padding: 10px; }
+  input,
+  textarea {
+    border-radius: 4px;
+    font-family: 'Open Sans';
+    font-size: 10pt;
+    margin: 0 0 5px 0;
+    padding: 8px;
+  }
+  #submit input {
+    padding: 10px;
+  }
 
   /* Validation messages styling */
   .contact-form-input input.error,
-  .contact-form-input textarea.error { border-color: red; }
-  .contact-form-input label.error { float: left; vertical-align: top; padding: 5px 10px; color: red; }
-
-  /* Shadow transition on focus*/
-  input[type=text], textarea { outline: none; border: 1px solid #DDDDDD;
-  	-webkit-transition: all 0.30s ease-in-out;
-  	-moz-transition: all 0.30s ease-in-out;
-  	-ms-transition: all 0.30s ease-in-out;
-  	-o-transition: all 0.30s ease-in-out;
+  .contact-form-input textarea.error {
+    border-color: red;
+  }
+  .contact-form-input label.error {
+    float: left;
+    vertical-align: top;
+    padding: 5px 10px;
+    color: red;
   }
 
-  input[type=text]:focus, textarea:focus { box-shadow: 0 0 10px red; border: 1px solid rgba(81, 203, 238, 1); }
+  /* Shadow transition on focus*/
+  input[type='text'],
+  textarea {
+    outline: none;
+    border: 1px solid #dddddd;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+  }
 
-  #submit input { cursor: pointer; width: 100px; margin: 0 auto; background-color: rgb(175,0,0); border: none; color: white; font-family: Oswald; text-transform: uppercase; font-size: 15px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+  input[type='text']:focus,
+  textarea:focus {
+    box-shadow: 0 0 10px red;
+    border: 1px solid rgba(81, 203, 238, 1);
+  }
+
+  #submit input {
+    cursor: pointer;
+    width: 100px;
+    margin: 0 auto;
+    background-color: rgb(175, 0, 0);
+    border: none;
+    color: white;
+    font-family: Oswald;
+    text-transform: uppercase;
+    font-size: 15px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+  }
 }
