--- a/assets/stylesheets/slider.less
+++ b/assets/stylesheets/slider.less
@@ -1,38 +1,57 @@
 .slider {
-  overflow : hidden;
-  position : relative;
-  width    : 670px;
-  height   : 344px;
-  border   : 2px solid black;
+  overflow: hidden;
+  position: relative;
+  width: 670px;
+  height: 344px;
+  border: 2px solid black;
   &:hover {
     cursor: pointer;
-    .slider-controls { display: block; }
+    .slider-controls {
+      display: block;
+    }
   }
 
   .slider-controls {
     .circle {
       @slider-control-height: 45px;
-      position         : absolute;
-      top              : 50%;
-      width            : 45px;
-      height           : @slider-control-height;
-      opacity          : 0.8;
-      background-color : rgba(0,0,0,0.9);
-      border-radius    : 50%;
-      text-align       : center;
+      position: absolute;
+      top: 50%;
+      width: 45px;
+      height: @slider-control-height;
+      opacity: 0.8;
+      background-color: rgba(0, 0, 0, 0.9);
+      border-radius: 50%;
+      text-align: center;
 
-      .fa-solid, .fa-regular, .fa-brands {
+      .fa-solid,
+      .fa-regular,
+      .fa-brands {
         line-height: @slider-control-height;
       }
 
-      &:hover { opacity: 1; }
+      &:hover {
+        opacity: 1;
+      }
       &.slider-control {
         color: white;
-        &.left { left: 0; margin-left: 10px; }
-        &.right { right: 0; margin-right: 10px; }
-        &.left .arrow { margin: 12px 0 0 12px; }
-        &.right .arrow { margin: 12px 0 0 15px; background-position: -17px 0; }
-        .arrow { width: 17px !important; }
+        &.left {
+          left: 0;
+          margin-left: 10px;
+        }
+        &.right {
+          right: 0;
+          margin-right: 10px;
+        }
+        &.left .arrow {
+          margin: 12px 0 0 12px;
+        }
+        &.right .arrow {
+          margin: 12px 0 0 15px;
+          background-position: -17px 0;
+        }
+        .arrow {
+          width: 17px !important;
+        }
       }
     }
   }
@@ -44,10 +63,24 @@
     position: absolute;
     display: block;
     .slide-caption {
-      width: 100%; background-color: rgba(0,0,0,0.8); position: absolute; bottom: 0; padding: 15px 15px 15px 20px;
-      .slide-title { color: rgb(255,0,0); font-size: 22px; text-shadow: 2px 2px 0.1em black; text-indent: 0; }
-      .slide-excerpt p { text-shadow: 2px 2px 0.1em black; text-indent: 0; color: white; margin: 0; font-size: 14px; }
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      position: absolute;
+      bottom: 0;
+      padding: 15px 15px 15px 20px;
+      .slide-title {
+        color: rgb(255, 0, 0);
+        font-size: 22px;
+        text-shadow: 2px 2px 0.1em black;
+        text-indent: 0;
+      }
+      .slide-excerpt p {
+        text-shadow: 2px 2px 0.1em black;
+        text-indent: 0;
+        color: white;
+        margin: 0;
+        font-size: 14px;
+      }
     }
   }
-
 }
