New edition BARS 26 (2025)

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -439,7 +439,7 @@ body {
 }
 
 /* Press (press.php) */
-#page-press .press-form-container {
+#page-press .press-main-container {
   padding: 10px 40px;
 }
 
