Add link to credentials form for press passes

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -381,7 +381,8 @@ body {
 }
 
 /* Festival (festival.php) */
-#page-festival .festival-history {
+#page-festival .festival-history,
+#page-press .press-main-container {
   padding: 10px 40px;
   line-height: 1.7em;
   font-size: 15px;
